force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Beat on Price</fullName>
            </value>
            <value>
                <fullName>Clean Up</fullName>
            </value>
            <value>
                <fullName>Competing Priorities</fullName>
            </value>
            <value>
                <fullName>Exogenous Event</fullName>
            </value>
            <value>
                <fullName>Missing Product Features</fullName>
            </value>
            <value>
                <fullName>Outsold</fullName>
            </value>
            <value>
                <fullName>Poor Qualification</fullName>
            </value>
            <value>
                <fullName>Not a Real Opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>