force-app/main/default/objects/Opportunity/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <description>Data quality score measuring key fields: Close Date in the past, Next Step Due Dates in the past, Opportunity Source, Last Activities, and Opportunity Owner</description>
    <formula>IF(  RecordType.Name = &quot;Pre-Opp&quot; , 100 ,
IF( IsClosed , 100 , 
IF(CloseDate &gt;= TODAY() , 20 , 0) +
IF( Next_Step_Due_Date__c &gt;= TODAY() , 20 , 0) +
IF( !ISBLANK ( TEXT(  Opportunity_Source__c )) , 20 , 0 ) +
IF( AND(
   TODAY() - LastActivityDate &lt; 30,
   !ISBLANK (LastActivityDate)) , 20 , 0) +
IF(  Owner.Profile.Name = &quot;Account Exec&quot; , 20 , 0) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>