force-app/main/default/objects/Opportunity/fields/Data_Quality_Score_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score_Notes__c</fullName>
    <description>Help text to explain the data quality score</description>
    <formula>IF( Data_Quality_Score__c = 100 , &quot;&quot; ,
   IF( CloseDate &lt; TODAY() , &quot;Close Date is past&quot;&amp;BR() , &quot;&quot;)&amp;
   IF( Next_Step_Due_Date__c &lt; TODAY() , &quot;Next Step is past&quot;&amp;BR(),&quot;&quot;)&amp;
   IF( ISBLANK ( TEXT(  Opportunity_Source__c )) , &quot;Missing Opportunity Source&quot;&amp;BR() ,&quot;&quot;)&amp;
   IF( OR(
      TODAY() - LastActivityDate &gt; 30,
      ISBLANK (LastActivityDate)) , &quot;No activity in past 30 days&quot;&amp;BR() , &quot;&quot;)&amp;
   IF(  Owner.Profile.Name != &quot;Account Exec&quot; , &quot;Opp Owner is not AE&quot; ,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Score Notes</label>
    <type>Text</type>
</CustomField>