force-app/main/default/objects/Opportunity/fields/First_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder_Date__c</fullName>
    <defaultValue></defaultValue>
    <description>Date the first renewal reminder was sent to the opportunity owner</description>
    <inlineHelpText>Automatically populated when the first renewal reminder email is sent</inlineHelpText>
    <label>First Reminder Date</label>
    <type>Date</type>
</CustomField>