force-app/main/default/objects/Opportunity/fields/Opportunity_prediction_score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_prediction_score__c</fullName>
    <label>Opportunity prediction score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>