force-app/main/default/objects/Opportunity/fields/Renewal_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether a renewal reminder has been sent for this Opportunity.</description>
    <label>Renewal Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>