force-app/main/default/objects/Opportunity/fields/Use_Case_s__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_s__c</fullName>
    <label>Use Case(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sdlc</fullName>
            </value>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>insights</fullName>
            </value>
            <value>
                <fullName>git custodian</fullName>
            </value>
            <value>
                <fullName>IaC</fullName>
            </value>
            <value>
                <fullName>SaaS (non-salesforce)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>