force-app/main/default/objects/Opportunity/recordTypes/Pre_Opp.recordType-meta.xml
<RecordType>
    <fullName>Pre_Opp</fullName>
    <active>true</active>
    <businessProcess>Pre Opp Process</businessProcess>
    <description>Lead Conversion Opp</description>
    <label>Pre-Opp</label>
</RecordType>