force-app/main/default/objects/Opportunity/validationRules/loss_reason_compulsory.validationRule-meta.xml
<ValidationRule>
    <fullName>loss_reason_compulsory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL ( StageName , &apos;Closed Lost&apos; ) , 
  ISBLANK ( TEXT( Lost_Reason__c  ))
)</errorConditionFormula>
    <errorMessage>Loss reason is mandatory when stage is &apos;Closed Lost&apos;</errorMessage>
</ValidationRule>