force-app/main/default/objects/Opportunity/validationRules/SDR_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SDR_Required</fullName>
    <active>true</active>
    <description>When Opportunity source is SDR Prospecting, the SDR field is required</description>
    <errorConditionFormula>AND(
 !ISNEW(),
 ISPICKVAL ( Opportunity_Source__c , &quot;SDR Prospecting&quot; ) ,
 ISBLANK ( SDR__c ) )</errorConditionFormula>
    <errorDisplayField>SDR_text__c</errorDisplayField>
    <errorMessage>Please enter an SDR in this field.</errorMessage>
</ValidationRule>