force-app/main/default/objects/Opportunity/listViews/Lansing_All_Q1_and_Q2_2023_Opportunities.listView-meta.xml
<ListView>
    <fullName>Lansing_All_Q1_and_Q2_2023_Opportunities</fullName>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Opportunity_Source__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Next_Step_Due_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Suspect,Qualifying,Contract Review,Signed,Ramping,Dead - not a fit,Dead - revisit,Meeting Scheduled,Sales Rejected</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>11/1/2023</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/1/2023</value>
    </filters>
    <label>Lansing All Q2 and Q3 FY24 Opportunities</label>
</ListView>