force-app/main/default/objects/Opportunity/listViews/Lansing_All_Q2_2023_Opportunities.listView-meta.xml
<ListView>
    <fullName>Lansing_All_Q2_2023_Opportunities</fullName>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Opportunity_Source__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Next_Step_Due_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>Sales_Forecast__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Market Qualification,Discovery,Solution Alignment,Solution Validation,Proposal,Negotiation,Signed Contract Received,Sales Accepted</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>11/1/2023</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/1/2023</value>
    </filters>
    <label>Lansing All Q3 2023 Opportunities</label>
</ListView>