force-app/main/default/objects/Opportunity/listViews/Q3_2023_Winnable_Opportunities.listView-meta.xml
<ListView>
    <fullName>Q3_2023_Winnable_Opportunities</fullName>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Opportunity_Source__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Next_Step_Due_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Discovery,Solution Alignment,Solution Validation,Proposal,Negotiation,Signed Contract Received,Sales Accepted</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>11/1/2023</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/1/2023</value>
    </filters>
    <filters>
        <field>Opportunity_Source__c</field>
        <operation>notContain</operation>
        <value>Renewal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>notContain</operation>
        <value>renewal</value>
    </filters>
    <label>Q3 2023 Winnable Opportunities</label>
</ListView>